teh_site_3_rc3:
+ Changed icons
+ Changed fonts
+ UI changes on main-page

teh_site_3_rc2:
+ Added hyphenator
+ Changed icons
+ Removed duplicated icons
+ UI changes on subpages

teh_site_3_rc1:
+ Changed background on main-page
+ Added more pages

teh_site_3_a4:
+ Fixed crossbrowsers issues on main-page

teh_site_3_a3:
+ Little UI changes

teh_site_3_a2:
+ Little UI changes

teh_site_3_a1:
+ Added sample pages

main-page-3-rc6:
+ Added headers for popup menu

main-page-3-rc5:
+ Compress images

main-page-3-rc4:
+ Copy icons to res folder

main-page-3-rc3:
+ Compress images
+ Added JavaScript for IE8- support

main-page-3-rc2:
+ Add icons for menus
+ Add other types of font
+ Clean-up

main-page-3-rc1:
+ Background added
+ Font added
+ Make folder with original icons

main-page-3-a2:
+ Logotype added
+ Bugfixes

main-page-3-a1:
+ Initial version