@@ -3,7 +3,7 @@
 <html lang="ru" xmlns="http://www.w3.org/1999/xhtml" xml:lang="ru">
 <head>
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=1024,height=600" />
+	<meta name="viewport" content="width=1024" />
 	<title>Томский техникум информационных технологий</title>
 	<link rel="stylesheet" href="res/index.css" />
 	<link rel="shortcut icon" href="res/icon.ico" />
