@@ -5,8 +5,9 @@
 	<meta charset="UTF-8" />
 	<title>Томский техникум информационных технологий</title>
 	<link rel="stylesheet" href="res/style.css" media="all" />
+	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<link rel="stylesheet" href="res/desktop.css" media="screen and (min-width: 1024px)" />
-	<link rel="stylesheet" href="res/tablet.css" media="(min-width: 600px) and (max-width: 1023px)" />
+	<link rel="stylesheet" href="res/tablet.css" media="(min-width: 601px) and (max-width: 1023px)" />
 	<link rel="stylesheet" href="res/mobile.css" media="(max-width: 600px)" />
 	<link rel="stylesheet" href="res/purple.css" media="all" />
 	<link rel="shortcut icon" href="icon.ico" />
@@ -74,6 +75,7 @@
 			<h1>Фестиваль поэзии и музыки «Листая фронто...</h1>
 			<div>
 				<p>25.04.2016-26.04.2016 в Международном культурном центре Томского политехнического университета проходил традиционный открытый фестиваль поэзии и музыки «Листая фронтовой альбом». Наш техникум представлял Липунов Николай, студент 151 группы, который исполнил песню «В осеннем парке». По итогам участия в фестивале Николай награжден дипломом. Занималась подготовкой студента Эльвина Борисовна Галицкая.</p>
+				<p><a><img src="res/news/1.jpg" alt="" /></a></p>
 			</div>
 		</section>
 		<section>
