@@ -44,7 +44,7 @@ body
 	font-family: navtext;
 }
 
-@media (max-width: 1080px)
+@media ((min-width: 600px) and (max-width: 1080px))
 {
 	body
 	{
@@ -60,6 +60,13 @@ body
 	}
 }
 
+@media(handheld or (max-width: 600px))
+{
+	body
+	{
+		transform: scale(2);
+	}
+}
 /*
  * Внешний вид логотипа по центру + анимация увеличения
  */
@@ -114,6 +121,7 @@ body > div > p
 	color: #888;
 	opacity: 0.7;
 	transition: 0.3s color linear;
+	padding-top: 3px;
 }
 
 body > img:hover ~ div > p,
@@ -336,14 +344,14 @@ body > div:nth-child(3)
 {
 	top: 0;
 	bottom: 0;
-	left: 15%;
+	left: 17%;
 	margin: auto 0;
 }
 body > div:nth-child(6)
 {
 	top: 0;
 	bottom: 0;
-	right: 15%;
+	right: 17%;
 	margin: auto 0;
 }
 
@@ -407,7 +415,7 @@ body > div:nth-child(3) > a::after
 	transform:rotate(100grad);
 	top: 0;
 	bottom: 0;
-	margin: auto -50% auto auto;
+	margin: auto -35% auto auto;
 	right: 0;
 }
 body > div:nth-child(6) > a::after
@@ -415,7 +423,7 @@ body > div:nth-child(6) > a::after
 	transform:rotate(100grad);
 	top: 0;
 	bottom: 0;
-	margin: auto auto auto -50%;
+	margin: auto auto auto -35%;
 	left: 0;
 }
 
@@ -471,16 +479,16 @@ body > div:nth-child(5):hover > a::after
 body > img:hover + div + div > a::after,
 body > div:nth-child(3):hover > a::after
 {
-	margin-right: -30%;
-	height: 70px;
+	margin-right: -22%;
+	height: 50px;
 	opacity: 1;
 }
 
 body > img:hover ~ div:nth-child(6) > a::after,
 body > div:nth-child(6):hover > a::after
 {
-	margin-left: -30%;
-	height: 70px;
+	margin-left: -22%;
+	height: 50px;
 	opacity: 1;
 }
 
