@@ -39,6 +39,10 @@ nav > a:first-of-type
 	margin: auto;
 	border: none;
 	transition: none;
+	width: 100vw;
+	height: 150px;
+	background-size: auto 150px;
+	background-position: 50% calc(50% + 3px);
 }
 
 nav > a:first-of-type:hover
@@ -50,13 +54,6 @@ nav > a:first-of-type:hover
 nav:not(.active) > a:first-of-type
 {
 	background-color: RGBA(255,255,255,0.5);		
-}
-
-nav > a:first-of-type
-{
-	width: 100vw;
-	height: 150px;
-	background-size: auto 150px;
 }
 
 /*
@@ -73,7 +70,6 @@ nav > a:not(:first-of-type)
 nav.active
 {
 	position: fixed;
-	height: 100vh;
 	width: 100vw;
 	overflow: hidden;
 	z-index: 5;
@@ -96,7 +92,21 @@ nav.active > a:not(:first-of-type)
  * BuGFiX
  * Фон некорректно отображался
  */
+html > body::before
+{
+	content: none;
+}
 main
 {
 	padding: 3px;
+}
+main > section > :not(h1)
+{
+	margin: 0 10px;
+	padding: 0;
+}
+
+footer
+{
+	background: RGBA(200,200,200,.5);
 }
