@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<title>Томский техникум информационных технологий</title>
 	<link rel="stylesheet" href="res/style.css" media="all" />
+	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<link rel="stylesheet" href="res/desktop.css" media="screen and (min-width: 1024px)" />
 	<link rel="stylesheet" href="res/tablet.css" media="(min-width: 600px) and (max-width: 1023px)" />
 	<link rel="stylesheet" href="res/mobile.css" media="(max-width: 600px)" />
